# nostradamus-safe-agentathon

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: bot.py
src/core/: cofig.py  costants.py
src/handlers/: callback_qery_handlers.py  command_handlers.py  error_handler.py  message_handler.py
src/keyboard/: inline_keyboard.py
src/models/: commands.py  confidace_score.py  modes.py
src/services/: api_service.py
src/utils/: logger.py  markdown.py  string_formatters.py
