[tool.poetry]
name = "nostradamus"
version = "0.1.0"
description = ""
authors = ["ihsan <ihsan.m@ampcome.com>"]
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"

[oetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"